# cgalcirclerays

./: CMakeLists.txt  README.md
include/: cgal_objloader.h  circle.h  raymanager.h  raytracer.h
src/: circle.cpp  main.cpp  raymanager.cpp  raytracer.cpp
